--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,70 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-829.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-167.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-249.3KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-344.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-171.3KB/s(Youtube:不良林), server: 185.172.113.102, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-166.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-286.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-492.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇭🇰 香港-486.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇦 加拿大-574.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-512.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-557.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -76,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-166.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-286.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-492.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
