--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-268.7KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-220.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-311.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-574.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-516.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-344.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-554.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.02MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-379.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -66,7 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-268.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-664.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-379.8KB/s(Youtube:不良林)
