--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-807.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇸🇬 新加坡-1.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-904.4KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-554.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.68.135.123, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-917.9KB/s(Youtube:不良林), server: 38.68.135.123, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-917.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-289.3KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-807.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.135.123, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇦 加拿大-637.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-3.71MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.7KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-4.52MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-383.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-904.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-807.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-637.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
