--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.68.135.123, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-289.3KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 38.68.135.123, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇭🇰 香港-3.71MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-297.4KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.17MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-935.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-551.5KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇭🇰 香港-794.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-313.7KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇦 加拿大-609.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-420.1KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-614.4KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-935.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-794.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
